<resources>
	<string name="app_name">StundenplanKotlinRefactor</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="action_settings">Settings</string>

	<string name="fab_behavior" translatable="false">com.maxkrass.stundenplan.ScrollingFloatingActionButtonBehavior</string>
	<string name="main_app_bar_layout_transition_name" translatable="false">main_toolbar</string>
	<string name="hyphen" translatable="false">-</string>
	<string name="action_subjects">Subjects</string>
	<string name="add_subject">Add</string>
	<string name="action_substitutionplan">Substitution Plan</string>
	<string name="action_timetable">Time Table</string>
	<string name="action_teachers">Teachers</string>
	<string name="one" translatable="false">1</string>
	<string name="two" translatable="false">2</string>
	<string name="three" translatable="false">3</string>
	<string name="four" translatable="false">4</string>
	<string name="five" translatable="false">5</string>
	<string name="six" translatable="false">6</string>
	<string name="seven" translatable="false">7</string>
	<string name="eight" translatable="false">8</string>
	<string name="nine" translatable="false">9</string>
	<string name="ten" translatable="false">10</string>
	<string name="choose_color">Choose a Color</string>
	<string name="monday_title">Mo</string>
	<string name="tuesday_title">Tu</string>
	<string name="wednesday_title">We</string>
	<string name="thursday_title">Th</string>
	<string name="friday_title">Fr</string>
	<string name="select_subject">Select a Subject…</string>
	<string name="select_teacher">Select a Teacher…</string>
	<string name="action_none">none</string>
	<string name="action_save">save</string>
	<string name="choose_subject_title">Your Subjects</string>
	<string name="new_lesson_title">New Lesson</string>
	<string name="double_period">Double Period</string>
	<string name="room_place">Room/Place</string>
	<string name="teachers_name">name</string>
	<string name="teachers_phone">Teacher\'s phone</string>
	<string name="teachers_email">Teacher\'s email</string>
	<string name="subject_name">Subject Name</string>
	<string name="subject_abbr">Abbr.</string>
	<string name="new_teacher">New Teacher</string>
	<string name="new_subject">New Subject</string>
	<string name="subject_name_invalid">The name can\'t be empty</string>
	<string name="grade_calculator">Grade Calculator</string>
	<string name="grade_back" translatable="false"><![CDATA[<-]]></string>
	<string name="no_saved_subject">You haven\'t saved any subjects yet…</string>
	<string name="points_average">Points Ø: %.2f</string>
	<string name="grade_average">Grade Ø: %.2f</string>
	<string name="substitution_plan">Substitution plan</string>
	<string name="substitutions_receive_notification">Receive notifications for the substitution plan</string>
	<string name="notification_settings">Notifications</string>
	<string name="q2" translatable="false">Q2</string>
	<string name="q1" translatable="false">Q1</string>
	<string name="ef" translatable="false">EF</string>
	<string name="my_subjects">My Subjects</string>
	<string name="visible_substitution_plans">Visible substitution plans</string>
	<string name="my_saved_subjects">My saved subjects</string>
	<string name="action_grade_calc">Grade calculator</string>
	<string name="choose_teacher">Choose Teacher</string>
	<string name="select_subject_error">You must select a Subject</string>
	<string name="saving_failed_error">Saving Failed!</string>
	<string-array name="weekday">
		<item>Mondays</item>
		<item>Tuesdays</item>
		<item>Wednesdays</item>
		<item>Thursdays</item>
		<item>Fridays</item>
	</string-array>
	<string-array name="periods">
		<item>1. Period</item>
		<item>2. Period</item>
		<item>3. Period</item>
		<item>4. Period</item>
		<item>5. Period</item>
		<item>6. Period</item>
		<item>7. Period</item>
		<item>8. Period</item>
		<item>9. Period</item>
		<item>10. Period</item>
	</string-array>
	<string name="lesson_already_existing_error">You already have a lesson %1$ss %2$d. period</string>
	<string name="profile_image_description">Profile Image</string>
	<string name="manage_teachers_title">Your Teachers</string>
</resources>
