<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:showIn="navigation_view">

	<item
		android:checked="true"
		android:id="@+id/stundenplanFragment"
		android:title="@string/action_timetable" />
	<item
		android:enabled="true"
		android:id="@+id/substitutionPlanFragment"
		android:title="@string/action_substitutionplan"/>
	<item
		android:enabled="true"
		android:id="@+id/manageTeachersFragment"
		android:title="@string/action_teachers" />
	<item
		android:id="@+id/manageSubjectsFragment"
		android:title="@string/action_subjects" />
	<item
		android:enabled="true"
		android:id="@+id/gradeCalculatorFragment"
		android:title="@string/grade_calculator" />
	<item
		android:enabled="true"
		android:id="@+id/settingsFragment"
		android:title="@string/action_settings" />

</menu>
