<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/stundenplanFragment"
        android:icon="@drawable/ic_time_table_24dp"
        android:title="@string/action_timetable" />
    <item
        android:id="@+id/substitutionPlanFragment"
        android:icon="@drawable/ic_substitution_plan_24dp"
        android:title="@string/action_substitutionplan" />
    <item
        android:id="@+id/manageTeachersFragment"
        android:icon="@drawable/ic_teachers_24dp"
        android:title="@string/action_teachers" />
    <item
        android:id="@+id/manageSubjectsFragment"
        android:icon="@drawable/ic_subjects_24dp"
        android:title="@string/action_subjects" />
    <item
        android:id="@+id/gradeCalculatorFragment"
        android:icon="@drawable/ic_calculator_24dp2"
        android:title="@string/grade_calculator" />

</menu>