<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="16dp">

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/subject_name_layout"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/subject_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/subject_name" />

	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="wrap_content"
		android:layout_marginTop="16dp"
		app:counterEnabled="true"
		app:counterMaxLength="5"
		android:id="@+id/subject_abbr_layout"
		android:layout_height="wrap_content">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/subject_abbr"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:maxLength="5"
			android:minWidth="96dp"
			android:maxLines="1"
			android:hint="@string/subject_abbr" />

	</com.google.android.material.textfield.TextInputLayout>

	<FrameLayout
		android:id="@+id/select_teacher"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:layout_marginTop="16dp"
		style="@style/Selectable">

		<ImageView
			android:layout_width="24dp"
			android:layout_height="24dp"
			android:layout_gravity="center_vertical"
			style="@style/NotSelectable"
			android:src="@drawable/ic_person_24dp" />

		<TextView
			android:id="@+id/select_teacher_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_marginStart="56dp"
			android:text="@string/choose_teacher"
			style="@style/NotSelectable"
			android:textSize="16sp" />

	</FrameLayout>

	<FrameLayout
		android:id="@+id/choose_color"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		style="@style/Selectable">

		<View
			android:id="@+id/color_icon"
			android:layout_width="24dp"
			android:layout_height="24dp"
			android:layout_gravity="center_vertical"
			style="@style/NotSelectable"
			android:background="@drawable/color_icon" />

		<TextView
			android:id="@+id/color_name_label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_marginStart="56dp"
			style="@style/NotSelectable"
			android:text="@string/choose_color"
			android:textSize="16sp" />

	</FrameLayout>

</LinearLayout>