<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end|center_vertical"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/punkteD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:text="Punkte Ø: 0,00"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/notenD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/punkteD"
            android:text="Noten Ø: 0,00"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey600" />

    <ScrollView
        android:id="@+id/sview331"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/notenListe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="[]" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey600" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="7dp"
                android:paddingTop="4dp"
                android:text="Deine Fächer:" />

            <TextView
                android:id="@+id/fachListeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey600" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="Sehr Gut" />

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b15"
                style="@style/OutlineCalculatorButtonsStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b14"
                style="@style/OutlineCalculatorButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="14" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b13"
                style="@style/OutlineCalculatorButtonsEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="13" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey600" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="Gut" />

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b12"
                style="@style/OutlineCalculatorButtonsStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b11"
                style="@style/OutlineCalculatorButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="11" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b10"
                style="@style/OutlineCalculatorButtonsEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey600" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="Befriedigend" />

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b9"
                style="@style/OutlineCalculatorButtonsStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nine" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b8"
                style="@style/OutlineCalculatorButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b7"
                style="@style/OutlineCalculatorButtonsEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey600" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="Ausreichend" />

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b6"
                style="@style/OutlineCalculatorButtonsStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b5"
                style="@style/OutlineCalculatorButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b4"
                style="@style/OutlineCalculatorButtonsEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey600" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="Mangelhaft" />

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b3"
                style="@style/OutlineCalculatorButtonsStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b2"
                style="@style/OutlineCalculatorButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b1"
                style="@style/OutlineCalculatorButtonsEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey600" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:maxLines="1"
            android:text="Ungenügend" />

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b0"
                style="@style/OutlineCalculatorButtonsStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bBack"
                style="@style/OutlineCalculatorButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_back" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bDelete"
                style="@style/OutlineCalculatorButtonsEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="X" />
        </TableRow>
    </TableLayout>
</LinearLayout>
